# REI

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  TESTING.md  program.md  promptfoo.yaml  pyproject.toml  solution.md
.github/workflows/: ci.yml  prod_judge.yml
data/: expert_advice.json  sample_products.json
docs/: autonomous_optimizer.md  code_review_guide.md  embedding_strategy.md  mas_testing.md  multi_turn_conversation.md  optimizer_stack_alternatives.md  phase10_ollama_llm.md  running_and_testing.md  test_data_spec.md  testing_roadmap.md  vector_db_selection.md
eval/: aider_edit_tools.py  autonomous_optimize.py  buyer_agent.py  calibrate.py  catalog_eval.py  compare.py  critic.py  dashboard.py  edit_tools.py  eval.py  grid_search.py  inspect.py  judge.py  langfuse_client.py  langfuse_dataset.py  langsmith_dataset.py  mas_report.py  mas_runner.py  optimize.py  optimizer_agent.py  personas.py  prod_judge.py  promote_feedback.py  results_schema.json  serve.py  token_counter.py
experiments/: log.md
greenvest/: config.py  feedback.py  graph.py  latency.py  logging_config.py  state.py
greenvest/nodes/: clarification_gate.py  intent_router.py  query_translator.py  synthesizer.py
greenvest/ontology/: __init__.py  gear_ontology.yaml
greenvest/providers/: llm.py  mock_llm.py  ollama_llm.py
scripts/: index_catalog.py  index_expert_advice.py  run_agent.py  run_mas.py  scrape_expert_advice.py
tests/: conftest.py  test_deterministic_nodes.py  test_p0_p1_autonomous.py  test_qdrant_live.py  test_safety.py  test_vertical_slice.py
web/: index.html
(+18 files in other folders)
