[project]
name = "greenvest"
version = "0.1.0"
description = "REI Co-op AI Sales Associate — Greenvest Agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "openai>=1.0.0",
    "qdrant-client[fastembed]>=1.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "plotly>=6.6.0",
    "pandas>=3.0.1",
    "langfuse>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
